# SpriteStudio6-SDK

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  BUILD.md  Doxyfile  LICENSE  README.md  appveyor.yml  ss6sdk_mnagaku_work.ipynb
.github/workflows/: docs.yml  macos.yml  main.yml  remove-old-artifacts.yml  windows.yml
Common/: CMakeLists.txt
Common/Animator/: CMakeLists.txt  ISsEffectRender.h  MersenneTwister.h  ssplayer_PartState.cpp  ssplayer_PartState.h  ssplayer_animedecode.cpp  ssplayer_animedecode.h  ssplayer_cellmap.cpp  ssplayer_cellmap.h  ssplayer_effect.cpp  ssplayer_effect.h  ssplayer_effect2.cpp  ssplayer_effect2.h  ssplayer_effectfunction.cpp  ssplayer_effectfunction.h  ssplayer_fonttexmng.cpp  ssplayer_fonttexmng.h  ssplayer_macro.h  ssplayer_math.cpp  ssplayer_math.h  ssplayer_matrix.cpp  ssplayer_matrix.h  ssplayer_mesh.cpp  ssplayer_mesh.h  ssplayer_render.cpp  ssplayer_render.h  ssplayer_types.h  xorshift32.h
Common/Animator/font/: ssfonttexture.cpp  ssfonttexture.h  ssfonttexturemng.cpp  ssfonttexturemng.h
Common/Drawer/: ssOpenGLSetting.h  ssopenglninesdrawer.cpp  ssopenglninesdrawer.h  ssopenglshapedrawer.cpp  ssopenglshapedrawer.h  ssplayer_render_dx9.cpp  ssplayer_render_dx9.h  ssplayer_render_gl.cpp  ssplayer_render_gl.h  ssplayer_shader_gl.cpp  ssplayer_shader_gl.h
Common/Drawer/GLSL/: default.fs  default.vs  ss-blur.fs  ss-bmask.fs  ss-circle.fs  ss-common.vs  ss-hsb.fs  ss-move.fs  ss-noise.fs  ss-outline.fs  ss-pix.fs  ss-scatter.fs  ss-sepia.fs  ss-spot.fs  ss-step.fs  ss-wave.fs
Common/Helper/: CMakeLists.txt  DebugPrint.cpp  DebugPrint.h  IsshTexture.cpp  IsshTexture.h  SsRawImage.cpp  SsRawImage.h  SsTextureFactory.cpp  SsTextureFactory.h  UnicodeConv.cpp  UnicodeConv.h  XPFileOpenDlg.cpp  XPFileOpenDlg.h  ssHelper.h  sshObject.cpp  sshObject.h  sshScene.cpp  sshScene.h  sshTask.cpp  sshTask.h  sshTextureBMP.cpp  sshTextureBMP.h  stb_image.c  stb_image.h  stb_image_write.h
Common/Helper/DirectX/: SSTextureDX9.cpp  SSTextureDX9.h  d3dsimple.cpp  d3dsimple.h
Common/Helper/MacOS/: OSXFileOpen.h  OSXFileOpen.mm
Common/Helper/OpenGL/: SSTextureGL.cpp  SSTextureGL.h
Common/Helper/Win/: WinMain.cpp
Common/Libs/avir/: README.md
Common/Libs/glad/: CMakeLists.txt
Common/Libs/glad/include/KHR/: khrplatform.h
Common/Libs/glad/include/glad/: glad.h
Common/Libs/glad/src/: glad.c
Common/Loader/: CMakeLists.txt  SsEffectBehavior.cpp  SsEffectBehavior.h  SsEffectElement.cpp  SsEffectElement.h  ssFilesystem.cpp  ssFilesystem.h  ssInterpolation.cpp  ssInterpolation.h  ssarchiver.cpp  ssarchiver.h  ssattribute.cpp  ssattribute.h  sscharconverter.cpp  sscharconverter.h  sscharmap.cpp  sscharmap.h  ssloader.h  ssloader_ssae.cpp  ssloader_ssae.h  ssloader_ssce.cpp  ssloader_ssce.h  ssloader_ssee.cpp  ssloader_ssee.h  ssloader_sspj.cpp  ssloader_sspj.h  ssloader_ssqe.cpp  ssloader_ssqe.h  ssloader_ssse.cpp  ssloader_ssse.h  ssstring_uty.cpp  ssstring_uty.h  sstypes.cpp  sstypes.h  ssvalue.cpp  ssvalue.h
Common/Loader/babel/: apple.csv  babel.cpp  babel.h  cp932.csv  euc-uni.csv  scoremap.csv  sjis-euc.csv  utc.csv
Common/Loader/nineslice/: ssnines.cpp  ssnines.h
Common/Loader/partvalues/: sspartvalue.cpp  sspartvalue.h  sspartvaluenines.cpp  sspartvaluenines.h  sspartvalueshape.cpp  sspartvalueshape.h  sspartvaluetext.cpp  sspartvaluetext.h
Common/Loader/shape/: sspolygon.cpp  sspolygon.h  ssshape.cpp  ssshape.h  ssshapearrow.cpp  ssshapearrow.h  ssshaperectangle.cpp  ssshaperectangle.h  ssshapestar.cpp  ssshapestar.h  ssshapetriangle.cpp  ssshapetriangle.h  ssvertex.cpp  ssvertex.h
Common/Loader/text/: ssfontdesc.cpp  ssfontdesc.h
Common/Loader/tinyxml2/: tinyxml2.cpp  tinyxml2.h
Scripts/: README.md  build_converter_macos.sh  build_converter_win.bat  build_converter_win_ninja.bat  build_convertergui_macos.sh  build_convertergui_win.bat  build_convertergui_win_ninja.bat  build_macos.sh  build_viewer2_macos.sh  build_viewer2_win.bat  build_viewer2_win_ninja.bat  build_viewer_macos.sh  build_viewer_win.bat  generate_docs.sh  generate_ssfb_code.bat  generate_ssfb_code.sh  prepare_build_converter_macos.sh  prepare_build_converter_win.bat  prepare_build_viewer2_macos.sh  prepare_build_viewer2_win.bat  prepare_converter_macos.sh  prepare_converter_win.bat  release_converter_macos.sh  release_converter_win.bat  release_converter_win_ninja.bat  release_macOS.sh  release_macos.sh  release_pack_macos.sh  release_viewer2_macos.sh  release_viewer2_win.bat  release_viewer2_win_ninja.bat  release_viewer_macos.sh  release_viewer_win.bat  release_win.bat  release_win_ninja.bat
Tools/: README.md
cmake/: initialize.cmake
docs/html/: _debug_print_8cpp.html  _debug_print_8cpp.js  _debug_print_8cpp__incl.dot  _debug_print_8cpp__incl.map  _debug_print_8cpp__incl.md5  _debug_print_8h.html  _debug_print_8h.js  _debug_print_8h__dep__incl.dot  _debug_print_8h__dep__incl.map  _debug_print_8h__dep__incl.md5  _debug_print_8h__incl.dot  _debug_print_8h__incl.map  _debug_print_8h__incl.md5  _debug_print_8h_source.html  _i_ss_effect_render_8h.html  _i_ss_effect_render_8h.js  _i_ss_effect_render_8h_source.html  _issh_texture_8cpp.html  _issh_texture_8cpp__incl.dot  _issh_texture_8cpp__incl.map  _issh_texture_8cpp__incl.md5  _issh_texture_8h.html  _issh_texture_8h.js  _issh_texture_8h__dep__incl.dot  _issh_texture_8h__dep__incl.map  _issh_texture_8h__dep__incl.md5  _issh_texture_8h__incl.dot  _issh_texture_8h__incl.map  _issh_texture_8h__incl.md5  _issh_texture_8h_source.html  _mersenne_twister_8h.html  _mersenne_twister_8h.js  _mersenne_twister_8h__dep__incl.dot  _mersenne_twister_8h__dep__incl.map  _mersenne_twister_8h__dep__incl.md5  _mersenne_twister_8h__incl.dot  _mersenne_twister_8h__incl.map  _mersenne_twister_8h__incl.md5  _mersenne_twister_8h_source.html  _o_s_x_file_open_8h.html  (+1812 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  (+154 more)
misc/: mainpage.md
misc/doxygen-custom/: header.html
plugins/player_settings/: ss6_sdk.ss-playersettings
